# go-grpc-bazel-docker

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  cloudbuild.yaml  go.mod  go.sum  repositories.bzl
certs/: BUILD  CA_crt.pem  grpc_server_crt.pem  grpc_server_key.pem
echo/: BUILD.bazel  echo.pb.go  echo.proto  echo.proto.pb  go.mod
examples/greeter_client/: BUILD.bazel  main.go
examples/greeter_server/: BUILD.bazel  main.go
greeter_client/: BUILD.bazel  main.go
greeter_server/: BUILD.bazel  main.go
helloworld/: BUILD.bazel  helloworld.pb.go  helloworld.proto  helloworld.proto.pb
