load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echo_go_proto",
    compiler = "@rules_go//proto:go_grpc",
    importpath = "github.com/salrashid123/go-grpc-bazel-docker/echo",
    proto = ":echo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":echo_go_proto"],
    #embed = [":echo_go_proto_gen"],
    importpath = "echo",
    visibility = ["//visibility:public"],
)

# For pregenerated echo.pb.go
go_library(
    name = "echo_go_proto_gen",
    srcs = [
        "echo.pb.go",
    ],
    importpath = "github.com/salrashid123/go-grpc-bazel-docker/echo",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",                         
        "@org_golang_x_net//context:go_default_library",         
    ],
)
