load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball", "oci_image_index")
load("@gazelle//:def.bzl", "gazelle")


go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",     
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "//echo:echo_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",        
    ],
)

pkg_tar(
    name = "client-tar",
    srcs = [":client"],
    package_dir = "/",
)

oci_image(
    name = "greeter_client_image",
    base = "@distroless_base",
    tars = [":client-tar"], 
    entrypoint = ["/client"],     
    cmd = [],
    env = {},
)

oci_push(
    name = "push-image",
    image = ":greeter_client_image",
    repository = "localhost:4000/greeter_client",
    #repository = "docker.io/salrashid123/greeter_client",    
    #repository = "us-central1-docker.pkg.dev/PROJECT_ID/repo1/greeter_client",
    remote_tags = ["client"]
)
