load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",    
)

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    importpath = "main",
    visibility = ["//visibility:private"],
    goos = "linux",
    goarch = "amd64",
)

container_image(
    name = "greeter_server_image",
    base = ":go_image",  
    ports=["50051"],
    # repository = "docker.io/salrashid123"
    # repository = "gcr.io/$PROJECT_ID" 
    repository = "us-central1-docker.pkg.dev/builder-project/repo1/greeter_server",         
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "//echo:echo_go_proto",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",    
        "@org_golang_google_grpc//credentials:go_default_library",                
        "@org_golang_x_net//context:go_default_library",      
    ],
)
